--- a/startup-connect-backend/src/main/resources/application.properties
+++ b/startup-connect-backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=5955
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
