Updateadmin module and added negotiation feature

--- a/startup-connect-backend/src/main/resources/application.properties
+++ b/startup-connect-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/st
+spring.datasource.url=jdbc:postgresql://localhost:5432/sc
 spring.datasource.username=postgres
 spring.datasource.password=5955
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -22,7 +22,7 @@ server.port=8080
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-app.upload.dir=D:/startup-connect/uploads/pitchdecks
+app.upload.dir=D:/Downloads/projects/fornttt/my-app/public/pitchdecks
 
 # Logging Configuration
 logging.level.com.startupconnect=DEBUG
