--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "framer-motion": "^12.9.2",
     "jwt-decode": "^4.0.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "recharts": "^2.12.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
