--- a/startup-connect-backend/Dockerfile
+++ b/startup-connect-backend/Dockerfile
@@ -15,5 +15,8 @@ ENV SPRING_DATASOURCE_USERNAME=st_myko_user
 ENV SPRING_DATASOURCE_PASSWORD=QmRzJ2T9ugSGnEqy9MZ1CjHgw9YFB3EG
 ENV SPRING_JPA_HIBERNATE_DDL_AUTO=update
 ENV SPRING_PROFILES_ACTIVE=prod
+ENV JWT_SECRET=8Zz5tw0Ionm3XPZZfN0NOml3z9FMfmpgXwovR9fp6ryDIoGRM8EPHAB6iHsc0fb
+ENV SPRING_JPA_SHOW_SQL=true
+ENV SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true
 
 ENTRYPOINT ["java", "-jar", "app.jar"] 
